--- a/avatar.html
+++ b/avatar.html
@@ -15,73 +15,98 @@
       padding: 20px;
     }
 
+    h1 {
+      font-size: 38px;
+      margin-bottom: 10px;
+      color: #fff;
+    }
+
+    /* --- Avatar --- */
     .avatar-box {
-      width: 200px;
-      height: 200px;
-      margin: 20px auto;
+      width: 260px;
+      height: 260px;
+      margin: 25px auto;
       border-radius: 50%;
       background: #0f172a;
-      border: 3px solid #22c55e;
+      border: 4px solid #22c55e;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 90px;
+      font-size: 120px;
       animation: pulse 2s infinite;
     }
 
     @keyframes pulse {
       0% { transform: scale(1); }
-      50% { transform: scale(1.08); }
+      50% { transform: scale(1.05); }
       100% { transform: scale(1); }
     }
 
+    /* --- Main Boxes --- */
     .box {
       width: 90%;
-      max-width: 700px;
+      max-width: 900px;
       margin: 20px auto;
       background: #0f172a;
-      padding: 15px;
-      border-radius: 15px;
+      padding: 20px;
+      border-radius: 18px;
       border: 1px solid #1e293b;
       text-align: right;
     }
 
     input {
       width: 100%;
-      padding: 10px;
-      border-radius: 8px;
+      padding: 12px;
+      border-radius: 10px;
       border: none;
       margin-top: 10px;
-      font-size: 16px;
+      font-size: 17px;
     }
 
     button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      border-radius: 8px;
+      margin-top: 12px;
+      padding: 12px 25px;
+      border-radius: 10px;
       background: #22c55e;
       border: none;
       color: #000;
       font-weight: bold;
       cursor: pointer;
+      font-size: 16px;
+    }
+
+    button:hover {
+      background: #16a34a;
     }
 
     audio {
-      margin-top: 10px;
+      margin-top: 15px;
       width: 100%;
     }
-  </style>
 
+    .label-title {
+      color: #38bdf8;
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+
+    .text-out {
+      margin-top: 6px;
+      font-size: 18px;
+      line-height: 1.7;
+    }
+
+  </style>
 </head>
 
 <body>
 
   <h1>أفاتار المؤتمر – المساعد الافتراضي</h1>
 
-  <!-- الأفاتار المتحرك -->
+  <!-- AVATAR -->
   <div class="avatar-box">👨‍🔬</div>
 
-  <!-- إدخال السؤال -->
+  <!-- السؤال -->
   <div class="box">
     <label>اكتب سؤالك بالعربية:</label>
     <input id="question" type="text" placeholder="مثال: ما أهداف المؤتمر؟">
@@ -95,36 +120,36 @@
     <audio id="audioPlayer" controls></audio>
   </div>
 
-  <!-- عرض النتائج -->
+  <!-- النتائج -->
   <div class="box">
-    <h3>السؤال (بالإنجليزية):</h3>
-    <div id="q_en" style="color:#38bdf8"></div>
+    <div class="label-title">السؤال (بالإنجليزية):</div>
+    <div id="q_en" class="text-out"></div>
 
-    <h3>الإجابة (بالعربية):</h3>
-    <div id="a_ar" style="color:#a5b4fc"></div>
+    <div class="label-title" style="color:#a5b4fc;">الإجابة (بالعربية):</div>
+    <div id="a_ar" class="text-out"></div>
 
-    <h3>الإجابة (بالإنجليزية):</h3>
-    <div id="a_en" style="color:#fbbf24"></div>
+    <div class="label-title" style="color:#fbbf24;">الإجابة (بالإنجليزية):</div>
+    <div id="a_en" class="text-out"></div>
   </div>
 
 
+
   <script>
-    // ----------------------------
-    // إرسال سؤال نصي
-    // ----------------------------
+    // ----------------------------------
+    // إرسال سؤال نصّي إلى /ask
+    // ----------------------------------
     async function ask() {
       const question = document.getElementById("question").value.trim();
       if (!question) return;
 
       const res = await fetch("/ask", {
         method: "POST",
-        headers: {"Content-Type": "application/json"},
+        headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ question })
       });
 
       const data = await res.json();
 
-      // عرض النصوص
       document.getElementById("q_en").textContent = data.question_en;
       document.getElementById("a_ar").textContent = data.answer_ar;
       document.getElementById("a_en").textContent = data.answer_en;
@@ -137,16 +162,17 @@
       }
     }
 
-    // ----------------------------
-    // تسجيل الصوت STT
-    // ----------------------------
+
+
+    // ----------------------------------
+    // تسجيل الصوت
+    // ----------------------------------
     let mediaRecorder;
     let audioChunks = [];
 
     async function startRecording() {
       const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
       mediaRecorder = new MediaRecorder(stream);
-
       audioChunks = [];
 
       mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
@@ -156,13 +182,10 @@
         const formData = new FormData();
         formData.append("audio", blob, "speech.webm");
 
-        const res = await fetch("/stt", {
-          method: "POST",
-          body: formData
-        });
-
+        const res = await fetch("/stt", { method: "POST", body: formData });
         const data = await res.json();
-        document.getElementById("question").value = data.text;
+
+        document.getElementById("question").value = data.text;  // وضع النص في خانة السؤال
       };
 
       mediaRecorder.start();
